//cmd 1000
syntax = "proto3";

import "common.proto";
option java_multiple_files = true;
option java_package = "com.yuandian.data.push";

//cmd=10000
message PushChatMessage {
     PChatInfo chatInfo = 1;
}

//cmd =10001
message PushChatRead {
     int64 targetId = 1;
     int64 chatId = 2;
}

//cmd=10002 好友申请通知
message PushFriendApply {
     int64 targetId = 1;
}

//cmd =10003 好友同意通知
message PushFriendAgree {
     int64 targetId = 1;
}
